--- a/dew.html
+++ b/dew.html
@@ -52,7 +52,7 @@ wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;
         <div class="main">
             <img src="main-img.png">
             <div class="about-text">
-                <h2>About me</h2>
+                <h2>Haqqında</h2>
                 <h5>Developer <span>& Designer</span> </h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam inventore rem 
                     eveniet illo aperiam ab et iusto officia harum sint doloribus labore odit placeat ut perferendis
